<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_account"
        android:title="@string/inicio"

        />

    <item
        android:id="@+id/legal"
        android:title="@string/consultorio" />
    <item
        android:id="@+id/nav_forms"
        android:title="@string/denuncias" />

    <item android:id="@+id/capacitaciones"
        android:title="@string/Capacitacion"
        />


    <item
        android:id="@+id/notas"
        android:title="@string/notas"
        />
    <item
        android:id="@+id/youtube"
        android:title="@string/youtube"
        />

    <item android:id="@+id/nosotros"
        android:title="@string/quienes"
        />
    <item android:id="@+id/boletines"
        android:title="@string/boletines"/>

</menu>