<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragmnets.LoginFragment"
    android:background="@color/baige">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        app:cardElevation="30dp"
        app:cardCornerRadius="50dp"
        >
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:background="@color/orange"

       >
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textSize="30sp"
           android:textColor="@color/white"
           android:text="@string/bienvenido"
           android:textAlignment="center"
           android:textStyle="bold"
           android:layout_marginTop="30dp"
           android:layout_marginBottom="20dp"
           />

       <EditText
           android:layout_width="match_parent"
           android:layout_height="48dp"
           android:layout_marginStart="30dp"
           android:layout_marginTop="20dp"
           android:layout_marginEnd="30dp"
           android:background="@drawable/edit_select_login"
           android:hint="@string/login"
           android:textAlignment="center"
           />

       <EditText
           android:layout_width="match_parent"
           android:layout_height="48dp"
           android:layout_marginStart="30dp"
           android:layout_marginTop="10dp"
           android:layout_marginEnd="30dp"
           android:background="@drawable/edit_select_login"
           android:hint="@string/login"
           android:textAlignment="center"
           />
       <androidx.appcompat.widget.AppCompatButton
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@drawable/btn_login"
           android:textColor="@color/white"
           android:layout_marginTop="20dp"
           android:layout_marginStart="30dp"
           android:layout_marginEnd="30dp"
           android:layout_marginBottom="20dp"
           android:text="Login"
           />
       <TextView
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:textSize="15sp"
           android:text="@string/cuenta"
           android:textColor="@color/white"
           android:textAlignment="center"
           android:layout_marginBottom="4dp"
           />
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/registrate"
           android:layout_gravity="center"
           android:layout_marginBottom="20dp"
           android:textColor="@color/white"
           android:textAllCaps="true"
           android:textStyle="bold"
           android:id="@+id/registro"
           />




   </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>